# casio-pong

./: CMakeLists.txt  LICENCE  README.md
assets-cg/: icon-cg.xcf
src/: main.c
src-fx/: main.c
